fix spacing on iPhone X

--- a/main.css
+++ b/main.css
@@ -634,6 +634,13 @@ header a:hover {
     font-size: 15px;
 
 }
+
+@media (max-width: 400px) {
+  .landing {
+    margin-left: 0px;
+  }
+}
+
 @media (max-width: 320px) {
 
 
